examples/kju/positive/structs/inner_struct.kju
fun write(a: Int): Unit import

fun kju():Unit{
	struct A{
		x:Int;
	};
	var a : A = new(A);
	a.x = 5;
	write(a.x);
}