examples/kju/negative/structs/struct_before_declaration.kju
fun kju() : Unit
{
    var x : A;
    struct A
    {
    };
}